[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/fire_ball.gd" type="Script" id=1]
[ext_resource path="res://textures/fire_ball.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 6.0

[sub_resource type="Animation" id=3]

resource/name = "f_ball"
length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("f_ball/sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("f_ball/sprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, -90.0, -180.0, -270.0 ]
}

[node name="fire_ball" type="StaticBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )
type = 0
move_pos = Vector2( 0, 0 )
speed = 100
f_process = false

[node name="Position2D" type="Position2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="f_ball" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="f_ball"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 5
collision/mask = 5
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="f_ball/Area2D"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="sprite" type="Sprite" parent="f_ball"]

transform/rot = -90.0
texture = ExtResource( 2 )
hframes = 4
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/f_ball = SubResource( 3 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="f_ball/Area2D" to="." method="_on_Area2D_area_enter"]

[connection signal="body_enter" from="f_ball/Area2D" to="." method="_on_Area2D_body_enter"]


